--- a/buildio_pro/apps/scribble/app/globals.css
+++ b/buildio_pro/apps/scribble/app/globals.css
@@ -4,4 +4,4 @@
 @import "../node_modules/@workspace/ui/src/styles/globals.css";
 
 /* Import the theme styles */
-@import "../node_modules/@workspace/theme/neo-brutalism.css";
+@import "../node_modules/@workspace/theme/base.css";
