--- a/buildio_pro/apps/expense-tracker/app/globals.css
+++ b/buildio_pro/apps/expense-tracker/app/globals.css
@@ -4,4 +4,4 @@
 @import "../node_modules/@workspace/ui/src/styles/globals.css";
 
 /* Import the theme styles */
-@import "../node_modules/@workspace/theme/nature.css";
+@import "../node_modules/@workspace/theme/northern-lights.css";
